<resources>
    <string name="app_name">EF_T5YN_SantillanValles_Klinsmann</string>
    <string name="proveedor">Proveedor</string>
    <string name="mantenedor_proveedores">Mantenedor Proveedores</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="chats">Chats</string>
    <string name="estados">Estados</string>
    <string name="llamadas">Llamadas</string>


    <string name="lista_proveedores">Lista de Proveedores</string>
    <string name="razon_social">Razón Social</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pais">Pais</string>
    <string name="guardar">guardar</string>
    <string name="hilos">Hilos</string>
    <string name="ejecutar">Ejecutar\n</string>
    <string name="lista_clientes">Lista de Clientes</string>
    <string name="mantenedor_clientes">Mantenedor Clientes</string>
    <string name="categoria">Categoria</string>
    <string name="editar">Editar</string>

    <string name="login_aplicacion">Login Catalogo de Productos</string>
    <string name="ingrese_su_email">Ingrese su email</string>
    <string name="ingrese_su_password">Ingrese su password</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="catalogo">Catalogo de Productos</string>
    <string name="producto">titulo_producto</string>
    <string name="descripcion">descripcion_producto</string>
    <string name="btnAdd">Agregar</string>
    <string name="btnCancel">Cancelar</string>
    <string name="lbltitle">Agregar Producto</string>
    <string name="lblNombre_AgregarProducto">Nombre</string>

    <string name="unidadMedida">Unidad de Medida</string>
    <string name="precio">Precio</string>
    <string name="foto">Foto</string>
    <string name="marca">Marca</string>
    <string name="stock">Stock</string>

    <string-array name="arrayMarca">
        <item>-- Selecciona una marca --</item>
        <item>P&amp;T</item>
        <item>Razona</item>
        <item>Sepolia</item>
        <item>4M</item>
    </string-array>

    <string-array name="arrayCategoria">
        <item>-- Selecciona una categoria --</item>
        <item>Limpieza</item>
        <item>Aseo Personal</item>
        <item>Alimentos</item>
        <item>Bebidas</item>
        <item>Electrodomésticos</item>
    </string-array>

    <string-array name="arrayUnidadDeMedida">
        <item>-- Seleccione unidad de medida --</item>
        <item>mg</item>
        <item>L</item>
        <item>unidad</item>
    </string-array>


    <string name="lblListadoProductos">Catálogo de Productos</string>
    <string name="lblTituloAgregar">Agregar Producto</string>
    <string name="lblTituloEditar">Editar Producto</string>


    <string name="lblDescripcion_AgregarProducto">Descripción</string>
    <string name="lblMarca_AgregarProducto">Marca</string>
    <string name="lblCategoría_AgregarProducto">Categoría</string>
    <string name="lblPrecio_AgregarProducto">Precio</string>
    <string name="lblFoto_AgregarProducto">Foto</string>
    <string name="lblStock_AgregarProducto">Stock</string>
    <string name="lblCantUnit_AgregarProducto">Cantidad Unitaria</string>
    <string name="lblUniMed_AgregarProducto">Unidad de Medida</string>

    <string name="lblIngresarNombre">Ingresar nombre</string>
    <string name="lblIngresarDescripcion">Ingresar descripción</string>
    <string name="lblIngresarPrecio">Ingresar Precio</string>
    <string name="lblIngresarFoto">Ingresar URL de foto</string>
    <string name="lblIngresarStock">Ingresar stock</string>
    <string name="lblIngresarCantUnit">Ingresar cantidad unitaria</string>


    <string name="btnEdit">Editar</string>
    <string name="lblBtnBack">Volver a listado</string>
    <string name="lblBtnAdd">Agregar producto</string>
    <string name="txtTitleLogin">LogIn Catalogo Productos</string>

    <string-array name="listMarca">
        <item>Seleccione una marca</item>
        <item>P y T</item>
        <item>Razona</item>
        <item>Sapolia</item>
        <item>4M</item>
    </string-array>

    <string-array name="listUnidadMedida">
        <item>Seleccione una unidad de medida</item>
        <item>mg</item>
        <item>ml</item>
        <item>unidad</item>
        <item>L</item>
        <item>KG</item>
    </string-array>

    <string-array name="listCategoria">
        <item>Seleccione una categoria</item>
        <item>Limpieza</item>
        <item>Aseo Personal</item>
        <item>Eletrodomésticos</item>
        <item>Ropa</item>
    </string-array>
</resources>