<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_aplicacion"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/lyTitulo">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/ingrese_su_email"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/lyUsuario">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/toggle_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/ingrese_su_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/lyPassword">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:textAllCaps="false"
            android:letterSpacing=".05"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/btn_color"
            android:text="@string/ingresar"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:textAllCaps="false"
            android:letterSpacing=".05"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/btn_color"
            android:text="@string/registrar"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>